--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-toggle": "^4.1.2",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.11"
   },
